kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-webapp
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: webapp
        image: karthick1911/webapp:2.0
        #image: us-east5-docker.pkg.dev/asi-everest-prod/asi-docker-images/demoimage:demoimage
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
